feat: Add api authentication
