# api/user/models.go
@@ -9,7 +9,8 @@ type User struct {
 	common.Model
 	FirstName   string    `json:"first_name"`
 	LastName    string    `json:"last_name"`
-	Password    string    `json:"password"`
+	Email       string    `json:"email"`
+	Password    string    `json:"-"`
 	Hobby       string    `json:"hobby"`
 	PhoneNumber string    `json:"phone_number"`
 	Address     string    `json:"address"`
