# common/dto.go
@@ -1,0 +1,7 @@
+package common
+
+type JSONResult struct {
+	Code    int         `json:"code" `
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
